--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <meta property="og:locale" content="ja_JP" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="text-base text-slate-800 bg-gray-100 max-w-lg mx-auto px-10">
-  <div class="text-center mt-10">
+<body class="text-base text-slate-800 bg-gray-100 max-w-lg mx-auto px-10 my-10">
+  <div class="text-center">
     <img class="rounded-lg mx-auto max-h-[15rem]" src="https://avatars.githubusercontent.com/u/17941141?v=5">
     <h1 class="text-3xl text-slate-600 mt-4 mb-2 font-medium">pizzacat83</h1>
     <span class="text-slate-500 text-sm">猫型存在</span>
