--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
   <div class="pt-10">
     <h2 class="text-2xl text-slate-500 mb-1">Links</h2>
     <ul class="list-disc list-inside">
-      <li>Keybase: <a class="hover:underline text-slate-600" href="https://keybase.io/pizzacat83">@pizzacat83</a></li>
-      <li>GitHub: <a class="hover:underline text-slate-600" href="https://github.com/pizzacat83">@pizzacat83</a></li>
-      <li>Blog: <a class="hover:underline text-slate-600" href="https://pizzacat83.hatenablog.com/">ねこも手を借りたい</a></li>
-      <li>DEV Community: <a class="hover:underline text-slate-600" href="https://dev.to/pizzacat83">@pizzacat83</a></li>
-      <li>pixiv: <a class="hover:underline text-slate-600" href="https://pixiv.me/pizzacat83">@pizzacat83</a></li>
-      <li>Mastodon: <a class="hover:underline text-slate-600" href="https://mstdn.jp/@pizzacat83">@pizzacat83@mstdn.jp</a></li>
-      <li>X: <a class="hover:underline text-slate-600" href="https://twitter.com/pizzacat83">@pizzacat83</a></li>
+      <li>Keybase: <a class="hover:underline text-slate-600" rel="me" href="https://keybase.io/pizzacat83">@pizzacat83</a></li>
+      <li>GitHub: <a class="hover:underline text-slate-600" rel="me" href="https://github.com/pizzacat83">@pizzacat83</a></li>
+      <li>Blog: <a class="hover:underline text-slate-600" rel="me" href="https://pizzacat83.hatenablog.com/">ねこも手を借りたい</a></li>
+      <li>DEV Community: <a class="hover:underline text-slate-600" rel="me" href="https://dev.to/pizzacat83">@pizzacat83</a></li>
+      <li>pixiv: <a class="hover:underline text-slate-600" rel="me" href="https://pixiv.me/pizzacat83">@pizzacat83</a></li>
+      <li>Mastodon: <a class="hover:underline text-slate-600" rel="me" href="https://mstdn.jp/@pizzacat83">@pizzacat83@mstdn.jp</a></li>
+      <li>X: <a class="hover:underline text-slate-600" rel="me" href="https://twitter.com/pizzacat83">@pizzacat83</a></li>
       <li>Discord: @pizzacat83</li>
   </div>
 </body>
