--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>pizzacat83</title>
   <link rel="icon" type="image/x-icon" href="https://avatars.githubusercontent.com/u/17941141?v=5">
+  <link rel="canonical" href="https://pizzacat83.com"> 
   <meta property="og:title" content="pizzacat83" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://pizzacat83.com" />
@@ -27,7 +28,7 @@
       <li>Blog: <a class="hover:underline text-slate-600" rel="me" href="https://pizzacat83.hatenablog.com/">ねこも手を借りたい</a></li>
       <li>DEV Community: <a class="hover:underline text-slate-600" rel="me" href="https://dev.to/pizzacat83">@pizzacat83</a></li>
       <li>pixiv: <a class="hover:underline text-slate-600" rel="me" href="https://pixiv.me/pizzacat83">@pizzacat83</a></li>
-      <li>Mastodon: <a class="hover:underline text-slate-600" rel="me" href="https://mstdn.jp/@pizzacat83">@pizzacat83@mstdn.jp</a></li>
+      <li>ActivityPub: <a class="hover:underline text-slate-600" rel="me" href="https://mstdn.jp/@pizzacat83">@pizzacat83@mstdn.jp</a></li>
       <li>X: <a class="hover:underline text-slate-600" rel="me" href="https://twitter.com/pizzacat83">@pizzacat83</a></li>
       <li>Discord: @pizzacat83</li>
   </div>
