--- a/index.html
+++ b/index.html
@@ -32,5 +32,24 @@
       <li>X: <a class="hover:underline text-slate-600" rel="me" href="https://twitter.com/pizzacat83">@pizzacat83</a></li>
       <li>Discord: @pizzacat83</li>
   </div>
+  <div class="pt-5">
+    <h2 class="text-2xl text-slate-500 mb-1">Activities</h2>
+    <ul class="list-disc list-inside">
+      <li>
+        <span class="inline-block px-2 py-0.5 text-xs bg-white rounded">登壇</span>
+        <a class="hover:underline text-slate-600" href="https://tskaigi.org/talks/pizzacat83">
+          TSKaigi 2024「Denoで作る快適な “as Code” プラットフォーム」
+        </a>
+        (<a class="hover:underline text-slate-600" href="https://speakerdeck.com/pizzacat83/deno-dezuo-rukuai-shi-na-as-code-puratutohuomu-tskaigi-2024">slide</a>,
+        <a class="hover:underline text-slate-600" href="https://youtu.be/4HvFoWrtGY4">video</a>)
+      </li>
+      <li>
+        <span class="inline-block px-2 py-0.5 text-xs bg-white rounded">登壇</span>
+        <a class="hover:underline text-slate-600" href="https://tskaigi.org/talks/pizzacat83">
+          Denoで変わるランタイムの景色 実践事例 Lunch LT「自分好みのTSバンドラをRustで作れる！Denoの内部ライブラリの活用」
+        </a>
+        (<a class="hover:underline text-slate-600" href="https://speakerdeck.com/pizzacat83/zi-fen-hao-mino-ts-bandorawo-rust-dezuo-reru-deno-nonei-bu-raiburarinohuo-yong-denodebian-warurantaimunojing-se-shi-jian-shi-li-lunch-lt">slide</a>)
+      </li>
+  </div>
 </body>
 </html>
