--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <h2 class="text-2xl text-slate-500 mb-1">Activities</h2>
     <ul class="list-disc list-inside">
       <li>
-        <span class="inline-block px-2 py-0.5 text-xs bg-white rounded">登壇</span>
+        <span class="text-slate-600 inline-block px-2 py-0.5 text-xs bg-white rounded">登壇</span>
         <a class="hover:underline text-slate-600" href="https://tskaigi.org/talks/pizzacat83">
           TSKaigi 2024「Denoで作る快適な “as Code” プラットフォーム」
         </a>
@@ -44,7 +44,7 @@
         <a class="hover:underline text-slate-600" href="https://youtu.be/4HvFoWrtGY4">video</a>)
       </li>
       <li>
-        <span class="inline-block px-2 py-0.5 text-xs bg-white rounded">登壇</span>
+        <span class="text-slate-600 inline-block px-2 py-0.5 text-xs bg-white rounded">登壇</span>
         <a class="hover:underline text-slate-600" href="https://tskaigi.org/talks/pizzacat83">
           Denoで変わるランタイムの景色 実践事例 Lunch LT「自分好みのTSバンドラをRustで作れる！Denoの内部ライブラリの活用」
         </a>
