--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <ul class="list-disc list-inside">
       <li>Keybase: <a class="hover:underline text-slate-600" rel="me" href="https://keybase.io/pizzacat83">@pizzacat83</a></li>
       <li>GitHub: <a class="hover:underline text-slate-600" rel="me" href="https://github.com/pizzacat83">@pizzacat83</a></li>
-      <li>Blog: <a class="hover:underline text-slate-600" rel="me" href="https://pizzacat83.hatenablog.com/">ねこも手を借りたい</a></li>
+      <li>Blog (new): <a class="hover:underline text-slate-600" rel="me" href="https://blog.pizzacat83.com/">pizzacat83's blog</a></li>
+      <li>Blog (previous): <a class="hover:underline text-slate-600" rel="me" href="https://pizzacat83.hatenablog.com/">ねこも手を借りたい</a></li>
       <li>DEV Community: <a class="hover:underline text-slate-600" rel="me" href="https://dev.to/pizzacat83">@pizzacat83</a></li>
       <li>pixiv: <a class="hover:underline text-slate-600" rel="me" href="https://pixiv.me/pizzacat83">@pizzacat83</a></li>
       <li>ActivityPub: <a class="hover:underline text-slate-600" rel="me" href="https://mstdn.jp/@pizzacat83">@pizzacat83@mstdn.jp</a></li>
@@ -40,8 +41,7 @@
         <a class="hover:underline text-slate-600" href="https://tskaigi.org/talks/pizzacat83">
           TSKaigi 2024「Denoで作る快適な “as Code” プラットフォーム」
         </a>
-        (<a class="hover:underline text-slate-600" href="https://speakerdeck.com/pizzacat83/deno-dezuo-rukuai-shi-na-as-code-puratutohuomu-tskaigi-2024">slide</a>,
-        <a class="hover:underline text-slate-600" href="https://youtu.be/4HvFoWrtGY4">video</a>)
+        (<a class="hover:underline text-slate-600" href="https://speakerdeck.com/pizzacat83/deno-dezuo-rukuai-shi-na-as-code-puratutohuomu-tskaigi-2024">slide</a>)
       </li>
       <li>
         <span class="text-slate-600 inline-block px-2 py-0.5 text-xs bg-white rounded">登壇</span>
@@ -49,6 +49,27 @@
           Denoで変わるランタイムの景色 実践事例 Lunch LT「自分好みのTSバンドラをRustで作れる！Denoの内部ライブラリの活用」
         </a>
         (<a class="hover:underline text-slate-600" href="https://speakerdeck.com/pizzacat83/zi-fen-hao-mino-ts-bandorawo-rust-dezuo-reru-deno-nonei-bu-raiburarinohuo-yong-denodebian-warurantaimunojing-se-shi-jian-shi-li-lunch-lt">slide</a>)
+      </li>
+      <li>
+        <span class="text-slate-600 inline-block px-2 py-0.5 text-xs bg-white rounded">登壇</span>
+        <a class="hover:underline text-slate-600" href="https://zenn.dev/sec_wakate/articles/acd5935f189460">
+          第1回 セキュリティ若手の会 (LT&交流会)「開発者向けツールを魔改造してセキュリティ診断ツールを作っている話」
+        </a>
+        (<a class="hover:underline text-slate-600" href="https://speakerdeck.com/pizzacat83/kai-fa-zhe-xiang-keturuwomo-gai-zao-sitesekiyuriteizhen-duan-turuwozuo-tuteiruhua-di-1hui-sekiyuriteiruo-shou-nohui-lt">slide</a>)
+      </li>
+
+      <li>
+        <span class="text-slate-600 inline-block px-2 py-0.5 text-xs bg-white rounded">運営</span>
+        <a class="hover:underline text-slate-600" href="https://zenn.dev/sec_wakate/articles/3891a59ab0b4fb">
+          第2回 セキュリティ若手の会 (LT&交流会)
+        </a>
+      </li>
+      <li>
+        <span class="text-slate-600 inline-block px-2 py-0.5 text-xs bg-white rounded">登壇</span>
+        <a class="hover:underline text-slate-600" href="https://2025.tskaigi.org/talks/pizzacat83b">
+          TSKaigi 2025「Language Server と喋ろう」
+        </a>
+        (<a class="hover:underline text-slate-600" href="https://speakerdeck.com/pizzacat83/language-server-todie-rou-tskaigi-2025">slide</a>)
       </li>
   </div>
 </body>
