--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <li>DEV Community: <a class="hover:underline text-slate-600" rel="me" href="https://dev.to/pizzacat83">@pizzacat83</a></li>
       <li>pixiv: <a class="hover:underline text-slate-600" rel="me" href="https://pixiv.me/pizzacat83">@pizzacat83</a></li>
       <li>ActivityPub: <a class="hover:underline text-slate-600" rel="me" href="https://mstdn.jp/@pizzacat83">@pizzacat83@mstdn.jp</a></li>
-      <li>X: <a class="hover:underline text-slate-600" rel="me" href="https://twitter.com/pizzacat83">@pizzacat83</a></li>
+      <li>X: <a class="hover:underline text-slate-600" rel="me" href="https://twitter.com/pizzacat83b">@pizzacat83b</a></li>
       <li>Discord: @pizzacat83</li>
   </div>
   <div class="pt-5">
@@ -70,6 +70,12 @@
           TSKaigi 2025「Language Server と喋ろう」
         </a>
         (<a class="hover:underline text-slate-600" href="https://speakerdeck.com/pizzacat83/language-server-todie-rou-tskaigi-2025">slide</a>)
+      </li>
+      <li>
+        <span class="text-slate-600 inline-block px-2 py-0.5 text-xs bg-white rounded">登壇</span>
+        <a class="hover:underline text-slate-600" href="https://fortee.jp/2025fp-matsuri/proposal/b6c70e2d-856b-47c5-9107-481883527634">
+          関数型まつり 2025「F#で自在につくる静的ブログサイト」
+        </a>
       </li>
   </div>
 </body>
